canary-deployment/green/green-deployment.yaml
# green-deployment.yaml
# kubectl create deployment green --image nationminu/green:v1 --namespace deployment-demo --dry-run=client -o yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: green
  name: green-deployment
  annotations:
    kubernetes.io/change-cause: "Initail Demo application"
    kubernetes.io/description: "Canary Demo Green application"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: green
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
    # type: Recreate
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - image: nationminu/green:v1
        name: green
        imagePullPolicy: Always
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /version.html
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
