canary-deployment/green/canary-ingress.yaml
# canary-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-canary-ing
  annotations:
    kubernetes.io/ingress.class: nginx
    # Enable the canary release feature.
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
    nginx.ingress.kubernetes.io/canary-by-header: "x-region"
    nginx.ingress.kubernetes.io/canary-by-header-value: "ap-seoul"
spec:
  rules:
  - host: canary.handle.local
    http:
      paths:
      - backend:
          service:
            name: green-svc
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
